Construcciion de componente header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <main class="main">
-  <h1 class="h1">TotalimpAngular</h1>
+<app-header></app-header>
+<app-footer></app-footer>
 </main>
 
 <router-outlet />
