--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,27 @@
-<p>header works!</p>
+<header class="header">
+    <div class="header__container">
+        <div class="header__logo">
+            <a href="#">Logo</a>
+        </div>
+
+        <button class="header__toggle" aria-label="Toggle menu" (click)="toggleMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+
+        <nav class="header__nav" [class.header__nav--active]="isMenuOpen">
+            <ul class="header__menu">
+                <li class="header__menu-item">
+                    <a href="#" class="header__menu-link">Home</a>
+                </li>
+                <li class="header__menu-item">
+                    <a href="#" class="header__menu-link">Categories</a>
+                </li>
+                <li class="header__menu-item">
+                    <a href="#" class="header__menu-link">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
