--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,9 @@
 <header class="header">
     <div class="header__container">
         <div class="header__logo">
-            <a href="#">Logo</a>
+            <a href="/">
+                <img src="/GotaLogo.png" alt="Logo" style="height: 60px;" />
+            </a>
         </div>
 
         <button class="header__toggle" aria-label="Toggle menu" (click)="toggleMenu()">
@@ -13,13 +15,13 @@
         <nav class="header__nav" [class.header__nav--active]="isMenuOpen">
             <ul class="header__menu">
                 <li class="header__menu-item">
-                    <a href="#" class="header__menu-link">Home</a>
+                    <a href="#" class="header__menu-link">Inicio</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="#" class="header__menu-link">Categories</a>
+                    <a href="#" class="header__menu-link">Categoriass</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="#" class="header__menu-link">Contact</a>
+                    <a href="#" class="header__menu-link">Contacto</a>
                 </li>
             </ul>
         </nav>
