Actualizacion de componentes

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="container">
+        <p>&copy; 2025 Franco Armando. Todos los derechos reservados.</p>
+    </div>
+</footer>
