--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,9 +17,23 @@
                 <li class="header__menu-item">
                     <a href="#" class="header__menu-link">Inicio</a>
                 </li>
-                <li class="header__menu-item">
-                    <a href="#" class="header__menu-link">Categoriass</a>
+                <button mat-button>
+                    Prueba
+                </button>
+
+                <li class="header__menu-item" (mouseenter)="onMouseEnter()" (mouseleave)="onMouseLeave()">
+                    <a href="#" class="header__menu-link" (click)="toggleSubmenu()" [attr.aria-expanded]="isSubmenuOpen"
+                        [attr.aria-haspopup]="true">
+                        Categorías
+                    </a>
+
+                    <ul class="header__submenu" [class.header__submenu--visible]="isSubmenuOpen || isDesktopView">
+                        <li class="header__submenu-item "><a href="#">Por medio litro</a></li>
+                        <li class="header__submenu-item"><a href="#">Por litro</a></li>
+                        <li class="header__submenu-item"><a href="#">Por 2,25 litros</a></li>
+                    </ul>
                 </li>
+
                 <li class="header__menu-item">
                     <a href="#" class="header__menu-link">Contacto</a>
                 </li>
