--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<main class="main">
 <app-header></app-header>
-<app-footer></app-footer>
+
+<main class="main">
+    <router-outlet></router-outlet>
 </main>
 
-<router-outlet />
+<!-- <app-footer></app-footer> -->
+
