--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -60,6 +60,7 @@
 
     &__menu-item {
         margin: 0 1rem;
+        position: relative; // necesario para submenu absoluto
     }
 
     &__menu-link {
@@ -71,6 +72,40 @@
 
         &:hover {
             color: #007bff;
+        }
+    }
+
+    &__submenu {
+        position: absolute;
+        background-color: #fff;
+        list-style: none;
+        padding: 0.5rem 0;
+        margin: 0;
+        top: 100%;
+        left: 0;
+        min-width: 150px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.2s ease, visibility 0.2s ease;
+        z-index: 999;
+
+        &--visible {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        &-item {
+            padding: 0.5rem 1rem;
+
+            a {
+                text-decoration: none;
+                color: #333;
+
+                &:hover {
+                    color: #22ebfd;
+                }
+            }
         }
     }
 
@@ -89,9 +124,10 @@
             max-height: 0;
             overflow: hidden;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: max-height 0.3s ease;
 
             &--active {
-                max-height: 300px;
+                max-height: 500px;
             }
         }
 
@@ -109,6 +145,35 @@
         &__menu-link {
             display: block;
             padding: 0.75rem 2rem;
+        }
+
+        &__submenu {
+            position: static;
+            background-color: rgb(237, 234, 234);
+            box-shadow: none;
+            padding: 0;
+            opacity: 1 !important;
+            visibility: visible !important;
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.3s ease;
+
+            &--visible {
+                max-height: 300px;
+            }
+
+            &-item {
+                padding: 0.5rem 2rem;
+
+                a {
+                    display: block;
+                    color: #333;
+
+                    &:hover {
+                        color: #22ebfd;
+                    }
+                }
+            }
         }
     }
 }
