Actualizacion del header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,6 +6,10 @@
             </a>
         </div>
 
+        <h1>
+            TOTALIMP
+        </h1>
+
         <button class="header__toggle" aria-label="Toggle menu" (click)="toggleMenu()">
             <span></span>
             <span></span>
