--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,9 +3,15 @@
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #22ebfd;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    background-color: #109ff2;
+    box-shadow: 0 2px 10px rgba(255, 254, 254, 0.1);
     z-index: 1000;
+
+    h1{
+        text-align:justify;
+        color: #fff;
+        font:bold
+    }
 
     &__container {
         display: flex;
@@ -60,18 +66,18 @@
 
     &__menu-item {
         margin: 0 1rem;
-        position: relative; // necesario para submenu absoluto
+        position: relative; 
     }
 
     &__menu-link {
-        color: #333;
+        color: white;
         text-decoration: none;
         font-size: 1rem;
         font-weight: 500;
         transition: color 0.3s ease;
 
         &:hover {
-            color: #007bff;
+            color: #333;
         }
     }
 
