--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
     <div class="container">
-        <p>&copy; 2025 Franco Armando. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Franco Armando. Proyecto personal Angular.</p>
     </div>
 </footer>
